css/nav.css
.logo-container {
  display: grid;
  justify-content: center;
  align-items: center;
}

header {
  padding: 2rem 8rem 0 8rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.eg-logo {
  width: 5rem;
}

.nav-link .eg-logo {
  padding-top: .2rem;
}



/**
NAV LINKS
**/
.nav-link {
  padding: 2.2rem 2.2rem 0rem 2.2rem;
  text-decoration: none;
  text-transform: capitalize;
  font-size: 1.8rem;
  font-weight: 500;

}

.nav-link:active {
  cursor: pointer;
}

.nav-links {
  display: block;
  font-size: 1.8rem;
  font-weight: 600;

    /*ease-in-out*/
  ;
}

.nav-links li {
  display: inline-block;
}

.nav-link:hover {
  font-weight: 400;
}



/*NAV LINK underline
_____________________________*/


.one:hover ~ hr {
  visibility: visible;
  margin-left:11%;
  transition: width 0.1s ease-in-out;
  color: var(--black);
}
.two:hover ~ hr {
  visibility: visible;
  margin-left: 34%;
  transition: width 0.1s ease-in-out;
}

.three:hover ~ hr {
  visibility: visible;
  margin-left: 59.5%;
  transition: width 0.1s ease-in-out;

}

.four:hover ~ hr {
  visibility: visible;
  margin-left: 85.5%;
  transition: width 0.1s ease-in-out;

}


hr{
  height: .7rem;
  width: .7rem;
  background: var(--gold);
  border: none;
  border-radius: 100%;
  margin: 0;
  visibility: hidden;
}


/*MEDIA SCREENS
_____________________________*/
@media screen and (max-width:800px) {
  header {
    flex-direction: column;
    padding: 2rem 0rem 0 0rem;
  }

  .nav-links {
    padding-top: 2rem;
  }
}

@media screen and (max-width:500px) {
  .nav-link {
    padding: 2.2rem 1rem 0rem 1rem;
  }
}

/* END NAVIGATION STYLES and MEDIA QUERIES */

